// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateAnalysis /> should render 1`] = `
<ModalDialog
  headerText="Analyze"
  label="create"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <SelectedSamples
        samples={
          Array [
            Object {
              "id": "foo",
              "name": "foo",
            },
            Object {
              "id": "bar",
              "name": "Bar",
            },
          ]
        }
      />
      <WorkflowSelect
        libraryType="normal"
        onChange={[Function]}
        value="pathoscope_bowtie"
      />
      <SubtractionSelector
        onChange={[Function]}
      />
      <IndexSelector
        error=""
        indexes={
          Array [
            Object {
              "id": "ref1",
              "reference": Object {
                "id": "fer1",
                "name": "Ref1",
              },
              "version": 3,
            },
            Object {
              "id": "ref2",
              "reference": Object {
                "id": "fer2",
                "name": "Ref2",
              },
              "version": 1,
            },
          ]
        }
        onSelect={[Function]}
        selected={Array []}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={1}
        >
          <MultiSummary
            samples={
              Array [
                Object {
                  "id": "foo",
                  "name": "foo",
                },
                Object {
                  "id": "bar",
                  "name": "Bar",
                },
              ]
            }
            selected={Array []}
            workflow="pathoscope_bowtie"
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={1}
        >
          <Button
            color="blue"
            disabled={false}
            icon="play"
            tipPlacement="top"
            type="submit"
          >
            Start
          </Button>
        </FlexItem>
      </Flex>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateAnalysis /> should render with error 1`] = `
<ModalDialog
  headerText="Analyze"
  label="create"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <SelectedSamples
        samples={
          Array [
            Object {
              "id": "foo",
              "name": "foo",
            },
            Object {
              "id": "bar",
              "name": "Bar",
            },
          ]
        }
      />
      <WorkflowSelect
        libraryType="normal"
        onChange={[Function]}
        value="pathoscope_bowtie"
      />
      <SubtractionSelector
        onChange={[Function]}
      />
      <IndexSelector
        error="Please select reference(s)"
        indexes={
          Array [
            Object {
              "id": "ref1",
              "reference": Object {
                "id": "fer1",
                "name": "Ref1",
              },
              "version": 3,
            },
            Object {
              "id": "ref2",
              "reference": Object {
                "id": "fer2",
                "name": "Ref2",
              },
              "version": 1,
            },
          ]
        }
        onSelect={[Function]}
        selected={Array []}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={1}
        >
          <MultiSummary
            samples={
              Array [
                Object {
                  "id": "foo",
                  "name": "foo",
                },
                Object {
                  "id": "bar",
                  "name": "Bar",
                },
              ]
            }
            selected={Array []}
            workflow="pathoscope_bowtie"
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={1}
        >
          <Button
            color="blue"
            disabled={true}
            icon="play"
            tipPlacement="top"
            type="submit"
          >
            Start
          </Button>
        </FlexItem>
      </Flex>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateAnalysis /> should render with index selected 1`] = `
<ModalDialog
  headerText="Analyze"
  label="create"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <SelectedSamples
        samples={
          Array [
            Object {
              "id": "foo",
              "name": "foo",
            },
            Object {
              "id": "bar",
              "name": "Bar",
            },
          ]
        }
      />
      <WorkflowSelect
        libraryType="normal"
        onChange={[Function]}
        value="pathoscope_bowtie"
      />
      <SubtractionSelector
        onChange={[Function]}
      />
      <IndexSelector
        error=""
        indexes={
          Array [
            Object {
              "id": "ref1",
              "reference": Object {
                "id": "fer1",
                "name": "Ref1",
              },
              "version": 3,
            },
            Object {
              "id": "ref2",
              "reference": Object {
                "id": "fer2",
                "name": "Ref2",
              },
              "version": 1,
            },
          ]
        }
        onSelect={[Function]}
        selected={
          Array [
            Object {
              "id": "ref1",
              "refId": "fer1",
            },
          ]
        }
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={1}
        >
          <MultiSummary
            samples={
              Array [
                Object {
                  "id": "foo",
                  "name": "foo",
                },
                Object {
                  "id": "bar",
                  "name": "Bar",
                },
              ]
            }
            selected={
              Array [
                Object {
                  "id": "ref1",
                  "refId": "fer1",
                },
              ]
            }
            workflow="pathoscope_bowtie"
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={1}
        >
          <Button
            color="blue"
            disabled={false}
            icon="play"
            tipPlacement="top"
            type="submit"
          >
            Start
          </Button>
        </FlexItem>
      </Flex>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateAnalysis /> should render with summary 1`] = `
<ModalDialog
  headerText="Analyze"
  label="create"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <SelectedSamples
        samples={
          Array [
            Object {
              "id": "foo",
              "name": "foo",
            },
            Object {
              "id": "bar",
              "name": "Bar",
            },
          ]
        }
      />
      <WorkflowSelect
        libraryType="normal"
        onChange={[Function]}
        value="nuvs"
      />
      <SubtractionSelector
        onChange={[Function]}
      />
      <IndexSelector
        error=""
        indexes={
          Array [
            Object {
              "id": "ref1",
              "reference": Object {
                "id": "fer1",
                "name": "Ref1",
              },
              "version": 3,
            },
            Object {
              "id": "ref2",
              "reference": Object {
                "id": "fer2",
                "name": "Ref2",
              },
              "version": 1,
            },
          ]
        }
        onSelect={[Function]}
        selected={
          Array [
            Object {
              "id": "ref1",
              "refId": "fer1",
            },
          ]
        }
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={1}
        >
          <MultiSummary
            samples={
              Array [
                Object {
                  "id": "foo",
                  "name": "foo",
                },
                Object {
                  "id": "bar",
                  "name": "Bar",
                },
              ]
            }
            selected={
              Array [
                Object {
                  "id": "ref1",
                  "refId": "fer1",
                },
              ]
            }
            workflow="nuvs"
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={1}
        >
          <Button
            color="blue"
            disabled={false}
            icon="play"
            tipPlacement="top"
            type="submit"
          >
            Start
          </Button>
        </FlexItem>
      </Flex>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateAnalysis /> should render with workflow selected 1`] = `
<ModalDialog
  headerText="Analyze"
  label="create"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <SelectedSamples
        samples={
          Array [
            Object {
              "id": "foo",
              "name": "foo",
            },
            Object {
              "id": "bar",
              "name": "Bar",
            },
          ]
        }
      />
      <WorkflowSelect
        libraryType="normal"
        onChange={[Function]}
        value="nuvs"
      />
      <SubtractionSelector
        onChange={[Function]}
      />
      <IndexSelector
        error=""
        indexes={
          Array [
            Object {
              "id": "ref1",
              "reference": Object {
                "id": "fer1",
                "name": "Ref1",
              },
              "version": 3,
            },
            Object {
              "id": "ref2",
              "reference": Object {
                "id": "fer2",
                "name": "Ref2",
              },
              "version": 1,
            },
          ]
        }
        onSelect={[Function]}
        selected={Array []}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={1}
        >
          <MultiSummary
            samples={
              Array [
                Object {
                  "id": "foo",
                  "name": "foo",
                },
                Object {
                  "id": "bar",
                  "name": "Bar",
                },
              ]
            }
            selected={Array []}
            workflow="nuvs"
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={1}
        >
          <Button
            color="blue"
            disabled={false}
            icon="play"
            tipPlacement="top"
            type="submit"
          >
            Start
          </Button>
        </FlexItem>
      </Flex>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;
